fix horizontal scroll issue

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -188,6 +188,7 @@ body {
 
 .container-container {
     background-color:#eee;
+    overflow:hidden;
 }
 
 .word-divider {
@@ -196,6 +197,7 @@ body {
     margin-top:100px;
     margin-bottom:100px;
     margin-right:-5px;
+    overflow:hidden;
 }
 
 .word-divider img {
